# Compilador

./: Lexer.x  Parser.y  trabalho.cabal
