
name:                Trabalho
version:             0.1.0.0
synopsis:            Trabalho
description:         Trabalho
author:              lsl
maintainer:          o-seu-email@fc.up.pt
category:            Language
build-type:          Simple
cabal-version:       >=1.10
                     
executable Trabalho
  main-is:             Main.hs
  other-modules:       Lexer, Parser
  build-tools:         alex, happy
  build-depends:       base, array
  hs-source-dirs:      
  default-language:    Haskell2010
